--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     <footer>
       <img src="logga.svg" alt="">
 	  
-	  <p>© 2022 Johan Lamm web@sahatc.se</p>
+	  <p>© 2022 Johan Lamm</p>
     </footer>
 
   </body>
