--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <!-- It contains an article -->
       <article>
 		<h2>Contact</h2>
-			<p>contact@sahatc.se</p>
+			<p>mailadress@domän.??</p>
       </article>
 
     </main>
